# banker

./: Makefile  README.md  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/app/: auth.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: expenses.py  users.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: Dashboard.jsx  ExpenseForm.jsx  Login.jsx  Register.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useTheme.js
