[tool.poetry]
name = "simplebank-backend"
version = "0.1.0"
description = "FastAPI backend for the SimpleBank application"
authors = []
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.6"
uvicorn = {version = "0.34.0", extras = ["standard"]}
sqlalchemy = {version = "2.0.36", extras = ["asyncio"]}
asyncpg = "0.30.0"
pydantic = "2.10.3"
python-jose = {version = "3.3.0", extras = ["cryptography"]}
passlib = {version = "1.7.4", extras = ["bcrypt"]}
bcrypt = ">=3.1.0,<4.0.0"
python-multipart = "0.0.19"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
httpx = "^0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
